# bandeirante

./: .gitignore  README.md  pyproject.toml
bandeirante.egg-info/: PKG-INFO
notebook/: 1-volatility_AR.ipynb  1-volatility_AR_(not_finished).ipynb  2-dolar_di_ibov_pca.ipynb  3-volatility_HMM.ipynb  3.1-all_vols_HMM (unfinished).ipynb  3.1-all_vols_HMM.ipynb  4-yang_zhang_model.ipynb  markov_development.ipynb
script/: online_bot.py  risk_man.py
src/bandeirante/: __init__.py  b3fileprocess.py  backtest.py  bc_api.py  bs.py  event_detection.py  frequency_lib.py  gaussian_flows.py  impliedvol_lib.py  indicators.py  julia_markov.jl  metatrader_lib.py  online.py  ordinal.py  picturing_lib.py  risk_system.py  sqlquery.sql  string_lib.py  volatility_lib.py
src/bandeirante.egg-info/: PKG-INFO
